# functors

./: CMakeLists.txt  README  functors.hpp  functors_example.cpp
